-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15
-
None
-
5
-
739e404eee420257f217001c5df753585b8a9031 (qt/qttools/5.15)
-
Da Vinci sprint 6
The examples and tutorials docs in qtdoc generate a lot of warnings related to \snippet and \quotefromfile commands.
Warnings were caused by a bug in example file handling.
| For Gerrit Dashboard: QTBUG-83130 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 295368,3 | qdoc: Fix regression in resolved example file paths | 5.15 | qt/qttools | Status: MERGED | +2 | 0 |